--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 *.pyc
 __pycache__/
 local_settings.py
-db.sqlite3
+django_project/db.sqlite3
 db.sqlite3-journal
 media
 
@@ -120,7 +120,7 @@ celerybeat.pid
 .env
 .venv
 env/
-venv/
+../venv/
 ENV/
 env.bak/
 venv.bak/
